name:                mudbath
version:             0.1.0.0
license:             OtherLicense
license-file:        UNLICENSE
author:              Tomas Carnecky
maintainer:          tomas.carnecky@gmail.com
category:            Testing
build-type:          Simple
cabal-version:       >=1.8

Executable mudbath
    Main-Is:        Main.hs

    Build-Depends:  aeson
    Build-Depends:  base          >= 4.0 && < 5
    Build-Depends:  bytestring
    Build-Depends:  directory
    Build-Depends:  github-types  == 0.1.0.5
    Build-Depends:  http-conduit
    Build-Depends:  http-types
    Build-Depends:  process
    Build-Depends:  random
    Build-Depends:  snap-core
    Build-Depends:  snap-server
    Build-Depends:  stm
    Build-Depends:  text
    Build-Depends:  transformers  >= 0.4

    Ghc-Options:    -threaded -Wall
